@@ -25,6 +25,7 @@ Localization
         #cc.science.experiment.any = Any
         #cc.science.biomeKSC = KSC
         #cc.science.biomeIdentifier = <<C:1>>\u2019s <<2>>
+        #cc.science.deployedScienceReport = Deployed Science Report
 
         // Part stuff
         #cc.parts.battery = Battery
